--- a/Space RM/Base.lproj/LaunchScreen.storyboard
+++ b/Space RM/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,22 +18,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space-portal-rick-and-morty" translatesAutoresizingMaskIntoConstraints="NO" id="2fB-jU-svu">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2fB-jU-svu" secondAttribute="trailing" id="HIS-Dc-KUn"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="2fB-jU-svu" secondAttribute="bottom" id="Ouc-fX-rzV"/>
-                            <constraint firstItem="2fB-jU-svu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="V9E-Vl-Ujj"/>
-                            <constraint firstItem="2fB-jU-svu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="vkv-yX-l3N"/>
+                            <constraint firstAttribute="bottom" secondItem="2fB-jU-svu" secondAttribute="bottom" id="NQr-dN-Iix"/>
+                            <constraint firstItem="2fB-jU-svu" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="QTd-4H-ELc"/>
+                            <constraint firstAttribute="trailing" secondItem="2fB-jU-svu" secondAttribute="trailing" id="d21-MP-MzZ"/>
+                            <constraint firstItem="2fB-jU-svu" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="pk4-ns-v0F"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.671755725190835" y="374.64788732394368"/>
         </scene>
     </scenes>
     <resources>
